# giggles-cli

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: config.rs  import.rs  login.rs  main.rs  shell.rs  upload.rs
